fixing the spacing

--- a/styles.css
+++ b/styles.css
@@ -631,7 +631,7 @@ a {
 
 .joining-question {
   color: #333;
-  font-size: 20px;
+  font-size: 36px;
   font-weight: 700;
   margin: 0 0 25px 0;
   font-family: 'Alegreya', serif;
@@ -667,7 +667,7 @@ a {
 
 .response-label {
   color: #333;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 700;
   margin: 10px 0 10px 0;
   font-family: 'Alegreya', serif;
@@ -755,7 +755,7 @@ a {
     max-width: none;
   }
   .form-section {
-    margin: -300px 0;
+    margin: 0 0;
   }
 }
 
@@ -789,7 +789,7 @@ a {
     max-width: none;
   }
   .form-section {
-    margin: -300px 0;
+    margin: 0 0;
   }
 }
 
@@ -823,7 +823,7 @@ a {
     max-width: none;
   }
   .form-section {
-    margin: -300px 0;
+    margin: 0 0;
   }
 }
 
